fix z-index info icon

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -2434,7 +2434,7 @@ product-quantity {
             width: auto;
             height: auto;
             color: #1a5294;
-            z-index: 1;
+            z-index: 0;
             animation: none!important;
             top: toRem(-7px);
             right: toRem(-10px);
